hack/echo/10-echo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
  namespace: lab
  labels:
    app: echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
        - name: echo
          image: hashicorp/http-echo:latest
          args:
            - "-text=hello from appsec lab"
            - "-status-code=200"
          ports:
            - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: echo
  namespace: lab
spec:
  selector:
    app: echo
  ports:
    - port: 80
      targetPort: 5678
